@startuml 
skinparam arrowcolor red
skinparam stateBackgroundColor yellow  

[*] --> IDLE
IDLE: Wait button press
WAIT_CLICK_TIMEOUT:
WAIT_HOLD_TIMEOUT:
IDLE --> WAIT_PRESS_TIMEOUT: Button == 0 / Start t_hold
WAIT_PRESS_TIMEOUT --> WAIT_CLICK_TIMEOUT: Button == 0 &&\n 50ms < t_hold
WAIT_CLICK_TIMEOUT --> WAIT_HOLD_TIMEOUT: Button == 0 &&\n 300 < t_hold

IDLE --> IDLE: if nothing\n happen
WAIT_PRESS_TIMEOUT --> IDLE: Button == 1 &&\nt_hold <= 50ms
WAIT_CLICK_TIMEOUT --> IDLE: Button == 1 &&\n t_hold <= 300ms / state_run(++id_state)
WAIT_HOLD_TIMEOUT --> IDLE: Button == 0 &&\n t_hold >= 3000ms / / state_run(0) 


@enduml
